updated doxyfile and put function back into purchase

--- a/docs/documentation/latex/Portfolio_8h_source.tex
+++ b/docs/documentation/latex/Portfolio_8h_source.tex
@@ -22,7 +22,7 @@
 \DoxyCodeLine{00019\ \ \ \ \ \textcolor{keyword}{const}\ std::vector<Purchase>\ \mbox{\hyperlink{classPortfolio_a867a21cf2a8a0a29522dbadfd564f82c}{getPurchases}}()\ \textcolor{keyword}{const};}
 \DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classPortfolio_a5e8e83cb75aca1c414cdab32643e9458}{summarizePortfolio}}(\textcolor{keywordtype}{int}\ time)\ \textcolor{keyword}{const};}
 \DoxyCodeLine{00021\ \ \ \ \ \textcolor{keywordtype}{void}\ summarizePortfolio()\ \textcolor{keyword}{const};}
-\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{void}\ addPurchaseToPortfolio(\mbox{\hyperlink{classPortfolio}{Portfolio}}\ \&portfolio,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classStock}{Stock}}\ \&selectedStock,\ \textcolor{keywordtype}{int}\ quantity,\ \textcolor{keywordtype}{float}\ purchasePrice,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classCalendar}{Calendar}}\ \&calendar);}
+\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classPortfolio_ab25b15ab52e16f650952afba4cbdaa20}{addPurchaseToPortfolio}}(\mbox{\hyperlink{classPortfolio}{Portfolio}}\ \&portfolio,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classStock}{Stock}}\ \&selectedStock,\ \textcolor{keywordtype}{int}\ quantity,\ \textcolor{keywordtype}{float}\ purchasePrice,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classCalendar}{Calendar}}\ \&calendar);}
 \DoxyCodeLine{00023\ \};}
 \DoxyCodeLine{00024\ }
 \DoxyCodeLine{00025\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ PORTFOLIO\_H}}
